--- a/vidly/package.json
+++ b/vidly/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "lodash": "^4.17.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
