--- a/vidly/package.json
+++ b/vidly/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "joi-browser": "13.4",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
